--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
 <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<title>Document</title>
+<title>Api - First Snacks</title>
 <link href='./assets/css/style.css' rel='stylesheet'>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
 <body>
 <div id='app'>
-<h1>Hello World</h1>
+
+<h1>API Tests</h1>
+<p>Stampo la stringa random: {{randomSentence}}</p><br>
+<p>Stampo l'intero random: {{randomNumber}}</p><br>
+<p>Stampo una lista di 10 email:</p>
+<ul></ul>
 </div>
 
 
